--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oauth-trial",
   "version": "1.0.0",
   "description": "trial user authentication",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,7 @@
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.3.3",
     "uniqid": "^5.0.3"
   }
 }
