--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "qrcode": "^1.3.3",
+    "sendmail": "^1.4.1",
     "uniqid": "^5.0.3"
   }
 }
