--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "qrcode": "^1.3.3",
+    "qrcode-reader": "^1.0.4",
     "sendmail": "^1.4.1",
     "uniqid": "^5.0.3"
   }
