--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
+    "node-where": "^1.1.0",
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
