--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
   "author": "KnightShade",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
-    "node-where": "^1.1.0",
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "qrcode": "^1.3.3",
-    "qrcode-reader": "^1.0.4",
-    "sendmail": "^1.4.1",
     "uniqid": "^5.0.3"
   }
 }
